// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPluginInit correctly initializes custom options 1`] = `
{
  "_root": "/virtual/project",
  "basePath": "/blog",
  "directories": {
    "helpers": "/virtual/project/gatsby/pages",
    "templates": "/virtual/project/custom/templates",
  },
  "pages": [],
  "pagination": {
    "limit": 10,
    "suffix": "/page/:page",
  },
  "template": "/virtual/project/custom/templates/default.js",
  "typeNames": {
    "page": "Page",
    "pageRoute": "PageRoute",
  },
}
`;

exports[`onPluginInit correctly initializes default options 1`] = `
{
  "_root": "/virtual/project",
  "basePath": "/",
  "directories": {
    "helpers": "/virtual/project/gatsby/pages",
    "templates": "/virtual/project/src/templates",
  },
  "pages": [],
  "pagination": {
    "limit": 10,
    "suffix": "/page/:page",
  },
  "template": null,
  "typeNames": {
    "page": "Page",
    "pageRoute": "PageRoute",
  },
}
`;

exports[`onPluginInit rejects invalid options and throws errors: Invalid Template 1`] = `
"A path with value "whatever" could not be found at any of the following locations:
 - "/virtual/project/src/templates/whatever
 - "/virtual/project/whatever""
`;
